AC_INIT([tvpvrd],[1.2.6],[johan162@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_PROG_CC
AC_PROG_CC_C99
AC_CONFIG_HEADER([src/config.h])
AC_CONFIG_FILES([
Makefile
src/Makefile
scripts/Makefile
docs/Makefile
docs/manpages/Makefile
])

AC_LANG_C
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h stdlib.h string.h strings.h sys/param.h sys/socket.h syslog.h unistd.h])
AC_CHECK_HEADER(libxml/parser.h,,AC_MSG_ERROR(libxml/parser.h not available))
AC_CHECK_HEADER(pcre.h,,AC_MSG_ERROR(pcre.h not available))
AC_CHECK_HEADER(linux/videodev2.h,,AC_MSG_ERROR(linux/videodev2.h not available))
AC_CHECK_HEADER(iniparser.h,,AC_MSG_ERROR(iniparser.h not available))
AC_CHECK_HEADER(errno.h,,AC_MSG_ERROR(errno.h not available))
AC_CHECK_HEADER(syslog.h,,AC_MSG_ERROR(syslog.h not available))
AC_CHECK_HEADER(getopt.h,,AC_MSG_ERROR(getopt.h not available))
AC_CHECK_HEADER(signal.h,,AC_MSG_ERROR(signal.h not available))
AC_CHECK_HEADER(fcntl.h,,AC_MSG_ERROR(fcntl.h not available))
AC_CHECK_HEADER(pwd.h,,AC_MSG_ERROR(pwd.h not available))
AC_CHECK_HEADER(grp.h,,AC_MSG_ERROR(grp.h not available))
AC_CHECK_HEADER(libgen.h,,AC_MSG_ERROR(libgen.h not available))
AC_CHECK_HEADER(dirent.h,,AC_MSG_ERROR(dirent.h not available))

AC_CHECK_LIB(pthread,pthread_create)
AC_CHECK_LIB([iniparser], [iniparser_getstring])
AC_CHECK_LIB([pcre], [pcre_exec])
AC_CHECK_LIB([xml2], [xmlParseFile])

AC_FUNC_FORK
AC_FUNC_MKTIME

AC_TYPE_UID_T
AC_TYPE_MODE_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T

AC_CHECK_FUNCS([atexit bzero floor getcwd inet_ntoa memset mkdir rmdir select socket strchr strnlen strdup strerror])

AC_OUTPUT
